things aren't really secrets :shrug:

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,12 @@
 
-# common
-LOCAL_DOMAIN="example.com"
-VIP_PORT="443"
 
-# k0s cluster
-K0S_CILIUM_ID="2"
-K0S_CILIUM_LB_IP="192.168.0.100"
-K0S_DOMAIN="example.com"
-K0S_VIP_IP="192.168.0.101"
-K0S_SERVER_CIDR="192.168.0.102/32"
-K0S_IPAM_CIDR="192.168.0.10/30"
-K0S_NGINX_LB_IP="192.168.0.103"
-K0S_INGRESS_ADGUARD_IP="192.168.1.2"
-K0S_INGRESS_PROXMOX_IP="192.168.1.5"
-K0S_INGRESS_KVM_IP="192.168.0.104"
-K0S_INGRESS_VACUUM_IP="192.168.0.105"
-K0S_INGRESS_UNIFI_IP="192.168.0.1"
-K0S_INGRESS_DRAC_IP="192.168.1.6"
-
-# k8s cluster
-K8S_CILIUM_ID="1"
-K8S_CILIUM_LB_IP="192.168.0.106"
-K8S_DOMAIN="example.com"
-K8S_VIP_IP="192.168.0.107"
-K8S_SERVER_CIDR="192.168.0.0/24"
-K8S_IPAM_CIDR="192.168.0.110/27"
-K8S_NGINX_LB_IP="192.168.0.108"
-K8S_RSYSLOG_LB_IP="192.168.0.109"
-LOKI_LB_IP="192.168.0.110"
+# ingresses
+INGRESS_ADGUARD_IP="192.168.1.2"
+INGRESS_PROXMOX_IP="192.168.1.5"
+INGRESS_KVM_IP="192.168.0.104"
+INGRESS_VACUUM_IP="192.168.0.105"
+INGRESS_UNIFI_IP="192.168.0.1"
+INGRESS_DRAC_IP="192.168.1.6"
 
 # cloudflare
 CLOUDFLARE_EMAIL="user@example.com"
@@ -36,10 +15,6 @@ CLOUDFLARE_RECORD_NAME="ingress.example.com"
 
 # dex
 DEX_IMMICH_CLIENT_SECRET="xxxxxxxx"
-
-# docker
-DOCKER_PRIVATE_REGISTRY="namespace"
-DOCKER_PULL_SECRET="xxxxxxxx"
 
 # emqx
 EMQX_ADMIN_PASSWORD="xxxxxxxx"
@@ -136,9 +111,6 @@ MINIO_ROOT_PASSWORD="xxxxxxxxx"
 MINIO_CONSOLE_SECRET_KEY="xxxxxxxx"
 MINIO_CONSOLE_ACCESS_KEY="xxxxxxxx"
 
-# nginx
-NGINX_LB_IP="192.168.0.105"
-
 # nfs
 NFS_SERVER_IP="192.168.1.4"
 
@@ -161,14 +133,6 @@ RESTIC_INFLUXDB_PASSWORD="xxxxxxxx"
 # rsyslog
 RSYSLOG_LB_IP="192.168.0.108"
 
-# rtltcp
-RTLTCP_LB_IP="192.168.0.109"
-
-# rtlamr-collect
-RTLAMR_METERS="xxxxxxxx,xxxxxxxx"
-RTLAMR_MSGTYPE="scm,scm+"
-RTLAMR_INFLUXDB_DBNAME="rtlamr_collect"
-
 # slack
 SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
 
@@ -183,15 +147,7 @@ VAULT_ADDR="https://vault.example.com"
 # zwave
 ZWAVE_NETWORK_KEY="xxxxxxxx"
 
-# unifi-poller
-UNIFI_URL="https://unifi.example.com"
-UNIFI_USERNAME="xxxxxxxx"
-UNIFI_PASSWORD="xxxxxxxx"
-
 # unifi-downloader
 UNIFI_DOWNLOADER_HOST="https://unifi.example.com"
 UNIFI_DOWNLOADER_USERNAME="xxxxxxxx"
 UNIFI_DOWNLOADER_PASSWORD="xxxxxxxx"
-
-# weave-gitops
-ADMIN_PASSWORD="xxxxxxxx"
