--- a/kubernetes/apps/k0s/ingress/nginx/certificates/certificates.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/certificates/certificates.yaml
@@ -2,14 +2,14 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "${DOMAIN/./-}"
+  name: "logfold-com"
   namespace: ingress
 spec:
-  secretName: "${DOMAIN/./-}-tls"
+  secretName: "logfold-com-tls"
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
-  commonName: "${DOMAIN}"
+  commonName: "logfold.com"
   dnsNames:
-  - "${DOMAIN}"
-  - "*.${DOMAIN}"
+  - "logfold.com"
+  - "*.logfold.com"
