--- a/kubernetes/apps/k0s/ingress/nginx/external-ingress/adguard.yaml
+++ b/kubernetes/apps/k0s/ingress/nginx/external-ingress/adguard.yaml
@@ -34,7 +34,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "adguard.${DOMAIN}"
+  - host: "adguard.logfold.com"
     http:
       paths:
       - backend:
@@ -46,4 +46,4 @@ spec:
         pathType: Prefix
   tls:
   - hosts:
-    - "adguard.${DOMAIN}"
+    - "adguard.logfold.com"
