--- a/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/externalsecret.yaml
@@ -22,7 +22,7 @@ spec:
               id: ldap
               name: LDAP
               config:
-                host: "lldap.${DOMAIN}"
+                host: "lldap.logfold.com"
                 port: 636
                 insecureNoSSL: false
                 insecureSkipVerify: false
