--- a/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/minio-operator/tenant/externalsecret.yaml
@@ -17,7 +17,7 @@ spec:
         config.env: |-
           export MINIO_STORAGE_CLASS_STANDARD="EC:2"
           export MINIO_BROWSER="on"
-          export MINIO_IDENTITY_LDAP_SERVER_ADDR="lldap.${DOMAIN}:636"
+          export MINIO_IDENTITY_LDAP_SERVER_ADDR="lldap.logfold.com:636"
           export MINIO_IDENTITY_LDAP_USER_DN_SEARCH_FILTER="(uid=%s)"
           export MINIO_IDENTITY_LDAP_GROUP_SEARCH_FILTER="(member=%d)"
           export MINIO_IDENTITY_LDAP_LOOKUP_BIND_DN="uid=admin,ou=people,{{.LLDAP_LDAP_BASE_DN}}"
