--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/externalsecret.yaml
@@ -19,8 +19,8 @@ spec:
             create: true
             clientID: "weave-gitops"
             clientSecret: "{{ .GITOPS_CLIENT_SECRET }}"
-            issuerURL: "https://dex.${K0S_DOMAIN}"
-            redirectURL: "https://gitops.${DOMAIN}/oauth2/callback"
+            issuerURL: "https://dex.logfold.com"
+            redirectURL: "https://gitops.nucstack.com/oauth2/callback"
   dataFrom:
     - extract:
         key: /flux-system/weave-gitops
