--- a/kubernetes/apps/k8s/home-automation/tidbyt-proxy/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/home-automation/tidbyt-proxy/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
     keepHistory: false
   values:
     image:
-      repository: "${DOCKER_PRIVATE_REGISTRY}/tidbyt-proxy"
+      repository: "dmcavinue/tidbyt-proxy"
       tag: v0.0.3
       pullPolicy: IfNotPresent
     controller:
