--- a/kubernetes/apps/k8s/media/immich/database/cluster.yaml
+++ b/kubernetes/apps/k8s/media/immich/database/cluster.yaml
@@ -39,7 +39,7 @@ spec:
         compression: bzip2
         maxParallel: 8
       destinationPath: s3://db-backup/immich
-      endpointURL: "https://minio.${K0S_DOMAIN}"
+      endpointURL: "https://minio.logfold.com"
       serverName: &currentCluster immich-6
       s3Credentials:
         accessKeyId:
@@ -52,7 +52,7 @@ spec:
   - name: *previousCluster
     barmanObjectStore:
       destinationPath: s3://db-backup/immich
-      endpointURL: "https://minio.${K0S_DOMAIN}"
+      endpointURL: "https://minio.logfold.com"
       s3Credentials:
         accessKeyId:
           name: immich-database-superuser
