--- a/kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
       ingress:
         enabled: false
       alertmanagerSpec:
-        externalUrl: "https://alertmanager.${DOMAIN}"
+        externalUrl: "https://alertmanager.nucstack.com"
         replicas: 1
         storage:
           volumeClaimTemplate:
