--- a/kubernetes/apps/k8s/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/k8s/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
       dashboard:
         ingressClassName: nginx
         host:
-          name: &host "rook.${DOMAIN}"
+          name: &host "rook.nucstack.com"
           path: /
         tls:
           - hosts:
