--- a/kubernetes/bootstrap/k0s/sharedsecrets.yaml
+++ b/kubernetes/bootstrap/k0s/sharedsecrets.yaml
@@ -6,28 +6,17 @@ metadata:
   namespace: flux-system
 type: Opaque
 stringData:
-  CILIUM_ID: "${K0S_CILIUM_ID}"
-  CILIUM_LB_IP: "${K0S_CILIUM_LB_IP}"
+  # cluster
   CLOUDFLARE_EMAIL: "${CLOUDFLARE_EMAIL}"
-  DOCKER_PRIVATE_REGISTRY: "${DOCKER_PRIVATE_REGISTRY}"
-  DOMAIN: "${K0S_DOMAIN}"  
-  ENVIRONMENT: "k0s"
-  IPAM_CIDR: "${K0S_IPAM_CIDR}"
-  LOCAL_DOMAIN: "${LOCAL_DOMAIN}"
-  LLDAP_LB_IP: "${LLDAP_LB_IP}"
-  NGINX_LB_IP: "${K0S_NGINX_LB_IP}"
   NFS_SERVER_IP: "${NFS_SERVER_IP}"
-  SERVER_CIDR: "${K0S_SERVER_CIDR}"
   SLACK_WEBHOOK: "${SLACK_WEBHOOK}"
-  VAULT_ADDR: "${VAULT_ADDR}"
-  VIP_IP: "${K0S_VIP_IP}"
-  VIP_PORT: "${VIP_PORT}"
-  INGRESS_ADGUARD_IP: "${K0S_INGRESS_ADGUARD_IP}"
-  INGRESS_DRAC_IP: "${K0S_INGRESS_DRAC_IP}"
-  INGRESS_KVM_IP: "${K0S_INGRESS_KVM_IP}"
-  INGRESS_PROXMOX_IP: "${K0S_INGRESS_PROXMOX_IP}"
-  INGRESS_UNIFI_IP: "${K0S_INGRESS_UNIFI_IP}"
-  INGRESS_VACUUM_IP: "${K0S_INGRESS_VACUUM_IP}"
+  # ingresses
+  INGRESS_ADGUARD_IP: "${INGRESS_ADGUARD_IP}"
+  INGRESS_DRAC_IP: "${INGRESS_DRAC_IP}"
+  INGRESS_KVM_IP: "${INGRESS_KVM_IP}"
+  INGRESS_PROXMOX_IP: "${INGRESS_PROXMOX_IP}"
+  INGRESS_UNIFI_IP: "${INGRESS_UNIFI_IP}"
+  INGRESS_VACUUM_IP: "${INGRESS_VACUUM_IP}"
 ---
 apiVersion: v1
 kind: Namespace
