--- a/kubernetes/apps/k0s/storage/externalsecret.yaml
+++ b/kubernetes/apps/k0s/storage/externalsecret.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "https://vault.${DOMAIN}"
+      server: "https://vault.logfold.com"
       path: "secret"
       version: "v2"
       auth:
