--- a/kubernetes/apps/k0s/vault/vault/app/ingress.yaml
+++ b/kubernetes/apps/k0s/vault/vault/app/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "vault.${DOMAIN}"
+  - host: "vault.logfold.com"
     http:
       paths:
       - backend:
@@ -18,4 +18,4 @@ spec:
         pathType: Prefix
   tls:
   - hosts:
-    - "vault.${DOMAIN}"
+    - "vault.logfold.com"
