--- a/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/flux-system/weave-gitops/app/helmrelease.yaml
@@ -37,7 +37,7 @@ spec:
       enabled: true
       className: nginx
       hosts:
-        - host: &host "gitops.${DOMAIN}"
+        - host: &host "gitops.nucstack.com"
           paths:
             - path: /
               pathType: Prefix
