--- a/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
+++ b/kubernetes/apps/k8s/home-automation/zwave-js-ui/app/ingress.yaml
@@ -4,12 +4,12 @@ metadata:
   name: zwavejs
   namespace: home-automation
   annotations:
-    nginx.ingress.kubernetes.io/auth-url: https://oauth.${DOMAIN}/oauth2/auth
-    nginx.ingress.kubernetes.io/auth-signin: https://oauth.${DOMAIN}/oauth2/start
+    nginx.ingress.kubernetes.io/auth-url: https://oauth.nucstack.com/oauth2/auth
+    nginx.ingress.kubernetes.io/auth-signin: https://oauth.nucstack.com/oauth2/start
 spec:
   ingressClassName: nginx
   rules:
-  - host: "zwavejs.${DOMAIN}"
+  - host: "zwavejs.nucstack.com"
     http:
       paths:
       - backend:
@@ -21,4 +21,4 @@ spec:
         pathType: Prefix
   tls:
   - hosts:
-    - "zwavejs.${DOMAIN}"
+    - "zwavejs.nucstack.com"
