--- a/kubernetes/apps/k8s/ingress/nginx/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/ingress/nginx/app/helmrelease.yaml
@@ -30,7 +30,7 @@ spec:
       replicaCount: 2
       service:
         annotations:
-          io.cilium/lb-ipam-ips: "${NGINX_LB_IP}"
+          io.cilium/lb-ipam-ips: "192.168.9.226"
         externalTrafficPolicy: Cluster
       ingressClassResource:
         default: true
