--- a/kubernetes/apps/k8s/media/immich/app/proxy/ingress.yaml
+++ b/kubernetes/apps/k8s/media/immich/app/proxy/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "immich.${DOMAIN}"
+  - host: "immich.nucstack.com"
     http:
       paths:
       - backend:
@@ -18,4 +18,4 @@ spec:
         pathType: Prefix
   tls:
   - hosts:
-    - "immich.${DOMAIN}"
+    - "immich.nucstack.com"
