--- a/kubernetes/apps/k8s/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/monitoring/grafana/app/helmrelease.yaml
@@ -31,7 +31,7 @@ spec:
       GF_DATE_FORMATS_USE_BROWSER_LOCALE: true
       GF_EXPLORE_ENABLED: true
       GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: natel-discrete-panel,pr0ps-trackmap-panel,panodata-map-panel
-      GF_SERVER_ROOT_URL: "https://grafana.${DOMAIN}"
+      GF_SERVER_ROOT_URL: "https://grafana.nucstack.com"
       GF_PANELS_DISABLE_SANITIZE_HTML: true
       GF_LOG_FILTERS: rendering:debug
       GF_DATE_FORMATS_FULL_DATE: "MMM Do, YYYY hh:mm:ss a"
