--- a/kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/externalsecret.yaml
+++ b/kubernetes/apps/k8s/monitoring/kube-prometheus-stack/app/externalsecret.yaml
@@ -2,20 +2,19 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: cluster-secrets
-  namespace: flux-system
+  name: prometheus-secret
+  namespace: monitoring
 spec:
   refreshInterval: "30m"
   secretStoreRef:
     name: vault-kv-backend
     kind: SecretStore
   target:
-    name: cluster-secrets
+    name: prometheus-secret
     template:
-      type: Opaque
       engineVersion: v2
       data:
-        NFS_SERVER_IP: "{{.NFS_SERVER_IP}}"
+        FLUX_SLACK_WEBHOOK: "{{ .FLUX_SLACK_WEBHOOK }}"
   dataFrom:
     - extract:
-        key: /cluster/k8s
+        key: /flux-system/notification
