--- a/kubernetes/apps/k8s/cert-manager/cert-manager/issuers/issuers.yaml
+++ b/kubernetes/apps/k8s/cert-manager/cert-manager/issuers/issuers.yaml
@@ -6,13 +6,13 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: "${CLOUDFLARE_EMAIL}"
+    email: dan@mcavinue.io
     privateKeySecretRef:
       name: letsencrypt-production
     solvers:
       - dns01:
           cloudflare:
-            email: "${CLOUDFLARE_EMAIL}"
+            email: dan@mcavinue.io
             apiTokenSecretRef:
               name: cloudflare-secret
               key: CLOUDFLARE_TOKEN
@@ -24,13 +24,13 @@ metadata:
 spec:
   acme:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
-    email: "${CLOUDFLARE_EMAIL}"
+    email: dan@mcavinue.io
     privateKeySecretRef:
       name: letsencrypt-staging
     solvers:
       - dns01:
           cloudflare:
-            email: "${CLOUDFLARE_EMAIL}"
+            email: dan@mcavinue.io
             apiTokenSecretRef:
               name: cloudflare-secret
               key: CLOUDFLARE_TOKEN
