--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -154,12 +154,12 @@ tasks:
       - vault write auth/kubernetes/k8s/role/monitoring
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=monitoring
-          policies=monitoring,flux,system,storage,default
+          policies=monitoring,flux-system,storage,default
           ttl=1440h
       - vault write auth/kubernetes/k0s/role/monitoring
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=monitoring
-          policies=monitoring,flux,system,default
+          policies=monitoring,flux-system,default
           ttl=1440h
       - echo -e "path \"pki/int_ca/sign/default\" { capabilities = [\"update\"] }\npath \"secret/data/cert-manager/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write cert-manager -
       - vault write auth/kubernetes/k8s/role/cert-manager
