--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,4 @@
 
-
-# ingresses
-INGRESS_ADGUARD_IP="192.168.1.2"
-INGRESS_PROXMOX_IP="192.168.1.5"
-INGRESS_KVM_IP="192.168.0.104"
-INGRESS_VACUUM_IP="192.168.0.105"
-INGRESS_UNIFI_IP="192.168.0.1"
-INGRESS_DRAC_IP="192.168.1.6"
-
 # cloudflare
 CLOUDFLARE_EMAIL="user@example.com"
 CLOUDFLARE_TOKEN="xxxxxxxx"
@@ -81,6 +72,14 @@ IMMICH_DB_BACKUP_SECRET="xxxxxxxx"
 INFLUXDB_USER="xxxxxxxx"
 INFLUXDB_PASSWORD="xxxxxxxx"
 
+# ingresses
+INGRESS_ADGUARD_IP="192.168.1.2"
+INGRESS_PROXMOX_IP="192.168.1.5"
+INGRESS_KVM_IP="192.168.0.104"
+INGRESS_VACUUM_IP="192.168.0.105"
+INGRESS_UNIFI_IP="192.168.0.1"
+INGRESS_DRAC_IP="192.168.1.6"
+
 # kopia
 KOPIA_GCS_PROJECT="some-gcs-project"
 KOPIA_GCS_BUCKET="some-gcs-bucket"
@@ -114,7 +113,7 @@ MINIO_CONSOLE_ACCESS_KEY="xxxxxxxx"
 # nfs
 NFS_SERVER_IP="192.168.1.4"
 
-# OAUTH2-PROXY
+# oauth2-proxy
 OAUTH2_CLIENT_SECRET="xxxxxxxx"
 OAUTH2_COOKIE_SECRET="xxxxxxxx"
 
@@ -130,9 +129,6 @@ RESTIC_HASS_PASSWORD="xxxxxxxx"
 RESTIC_ZWAVEJS_PASSWORD="xxxxxxxx"
 RESTIC_INFLUXDB_PASSWORD="xxxxxxxx"
 
-# rsyslog
-RSYSLOG_LB_IP="192.168.0.108"
-
 # slack
 SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
 
@@ -140,9 +136,6 @@ SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
 TIDBYT_API_KEY="xxxxxxxx"
 TIDBYT_DEVICE_ID="xxxxxxxx"
 TIDBYT_MQTT_TOPIC="plm/xxxxxxxx"
-
-# vault
-VAULT_ADDR="https://vault.example.com"
 
 # zwave
 ZWAVE_NETWORK_KEY="xxxxxxxx"
