--- a/kubernetes/apps/k8s/development/backstage/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/development/backstage/app/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
       architecture: standalone
     serviceAccount:
       create: true
-      name: backstage
+      name: backstage-sa
   valuesFrom:
     - targetPath: postgresql.auth.username
       kind: Secret
