--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -35,27 +35,27 @@ spec:
     cluster:
       name: "k8s"
       id: "1"
-    clustermesh:
-      useAPIServer: true
-      apiserver:
-        tls:
-          auto:
-            method: certmanager
-            certManagerIssuerRef:
-              group: cert-manager.io
-              kind: Issuer
-              name: vault-issuer
-        kvstoremesh:
-          enabled: true
-        service:
-          type: LoadBalancer
-          loadBalancerIP: "192.168.9.228"
-      config:
-        enabled: true
-        clusters:
-        - name: k0s
-          address: k0s.mesh.cilium.io
-          port: 2379
+    # clustermesh:
+    #   useAPIServer: true
+    #   apiserver:
+    #     tls:
+    #       auto:
+    #         method: certmanager
+    #         certManagerIssuerRef:
+    #           group: cert-manager.io
+    #           kind: Issuer
+    #           name: vault-issuer
+    #     kvstoremesh:
+    #       enabled: true
+    #     service:
+    #       type: LoadBalancer
+    #       loadBalancerIP: "192.168.9.228"
+      # config:
+      #   enabled: true
+      #   clusters:
+      #   - name: k0s
+      #     address: k0s.mesh.cilium.io
+      #     port: 2379
     containerRuntime:
       integration: containerd
       socketPath: /var/run/k3s/containerd/containerd.sock
@@ -63,13 +63,13 @@ spec:
       enabled: true
     hubble:
       enabled: true
-      tls:
-        auto:
-          method: certmanager
-          certManagerIssuerRef:
-            group: cert-manager.io
-            kind: Issuer
-            name: vault-issuer
+      # tls:
+      #   auto:
+      #     method: certmanager
+      #     certManagerIssuerRef:
+      #       group: cert-manager.io
+      #       kind: Issuer
+      #       name: vault-issuer
       metrics:
         enabled:
           - dns:query
